Set database history tables upgraded to true

--- a/zabbix/files/default/etc/zabbix/web/zabbix.conf.php.jinja
+++ b/zabbix/files/default/etc/zabbix/web/zabbix.conf.php.jinja
@@ -23,4 +23,5 @@ $ZBX_SERVER_PORT		= '{{ settings.get('zbxserverport', defaults.zbxserverport) }}
 $ZBX_SERVER_NAME		= '{{ settings.get('zbxservername', defaults.zbxservername) }}';
 
 $IMAGE_FORMAT_DEFAULT	= IMAGE_FORMAT_PNG;
+$DB['DOUBLE_IEEE754'] = 'true';
 ?>
